--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -588,6 +588,16 @@ workflows:
           go-test-flags: "-run=TestWindowedPost"
           winpost-test: "1"
           test-suite-name: window-post
+      - test-window-post:
+          codecov-upload: true
+          go-test-flags: "-run=TestWindowedDispute"
+          winpost-test: "1"
+          test-suite-name: window-post-dispute
+      - test-terminate:
+          codecov-upload: true
+          go-test-flags: "-run=TestTerminate"
+          winpost-test: "1"
+          test-suite-name: terminate
       - test-short:
           go-test-flags: "--timeout 10m --short"
           test-suite-name: short
