--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -201,6 +201,10 @@ jobs:
     <<: *test
   test-window-post:
     <<: *test
+  test-window-post-dispute:
+    <<: *test
+  test-terminate:
+    <<: *test
   test-conformance:
     description: |
       Run tests using a corpus of interoperable test vectors for Filecoin 
@@ -588,7 +592,7 @@ workflows:
           go-test-flags: "-run=TestWindowedPost"
           winpost-test: "1"
           test-suite-name: window-post
-      - test-window-post:
+      - test-window-post-dispute:
           codecov-upload: true
           go-test-flags: "-run=TestWindowedDispute"
           winpost-test: "1"
