--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -288,8 +288,11 @@ jobs:
       - prepare
       - run: cd extern/filecoin-ffi && make
       - run:
-          name: "build epik-soup testplan"
-          command: pushd testplans/epik-soup && go build -tags=testground .
+          name: "go get lotus@master"
+          command: cd testplans/lotus-soup && go get github.com/filecoin-project/lotus@master
+      - run:
+          name: "build lotus-soup testplan"
+          command: pushd testplans/lotus-soup && go build -tags=testground .
   trigger-testplans:
     description: |
       Trigger `epik-soup` test cases on TaaS
